--- a/src/sass/backpages/_member_mg.scss
+++ b/src/sass/backpages/_member_mg.scss
@@ -50,7 +50,7 @@
         width: 285px;
         border-radius: 8px;
         padding: 10px;
-        border: 2px solid #c4c4c4;
+        border: 2px solid #ccc;
         font-size: $fs-s;
     }
     // ===== page 12345 =====
