--- a/src/sass/backpages/_back_activity.scss
+++ b/src/sass/backpages/_back_activity.scss
@@ -1,7 +1,6 @@
 .backcontainer{
-    width: 80%;
     padding: 0 40px;
-    float: right;
+    margin-left: 20%;
     @include back_title();
     .buttonsnNumber{
         display: flex;
