--- a/src/sass/frontpages/_animal.scss
+++ b/src/sass/frontpages/_animal.scss
@@ -102,6 +102,8 @@
     cursor: pointer;
 }
 
+//---------------item-------------------
+
 .animalItem{
     display: flex;
     flex-wrap: wrap;
@@ -111,18 +113,20 @@
 }
 
 
-.animalItem_cover{
-    width: 450px;
+.animalItemImg_cover{
+    width: 600px;
+    display: flex;
+    justify-content: center;
 }
 
-.animalItem_cover img{
-    width: 400px;
-    text-align: center;
+.animalItem_img{
+    width: 500px;
 }
 
 .animalItem_p{
     width: 400px;
-    padding-top: 60px;
+    margin-top: 100px;
+    border: 1px red solid;
 }
 
 .animal-container{
