fix: 路徑及rwd圖片定位修正

--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -79,7 +79,7 @@
         <form action="" method="POST" id="register3" class="register_form form-off">
             <h4>註冊完成</h4>
             <p>您已完成註冊，歡迎加入Sìkha牧場</p>
-            <img src="../img/material/animal_shika_jump2.png" alt="">
+            <img src="./img/material/animal_shika_jump2.png" alt="">
             <button type="button" id="register_complete" class="register_done">完成</button>
         </form>
 
