--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -18,6 +18,9 @@
             .preview-img{
                 max-width: 100%;
             }
+            span{
+                line-height: 400px;
+            }
 
         }
         #drop_zone.-on {
