--- a/src/sass/frontpages/_activity.scss
+++ b/src/sass/frontpages/_activity.scss
@@ -169,7 +169,7 @@ button.hamburger_icon span.-hr.-bottom {
     margin-bottom: 50px;
     @include pad{
         margin-top: 50px;
-        margin-bottom: 0;
+        // margin-bottom: 0;
     }
     @include mobile{
         margin-top: 30px;
@@ -503,6 +503,7 @@ input .slider [type=radio]:checked {
 
     .item_imgcover{
         width: 400px;
+        height: 400px;
     }
     
     .item_p{
@@ -530,10 +531,15 @@ input .slider [type=radio]:checked {
 
     .item_imgcover{
         width: 300px;
+        height: 300px;
     }
     
     .item_p{
        width: 250px;
+    }
+
+    .item{
+        margin-top: 5px;
     }
 }
 
