--- a/src/sass/frontpages/_member.scss
+++ b/src/sass/frontpages/_member.scss
@@ -6,7 +6,7 @@
     width: 100%;
     position: relative;
     height: 500px;
-    background-image: url(../../img/activity/member_banner.png);
+    background-image: url("../../img/activity/member_banner.png");
     background-repeat: no-repeat;
     background-size: cover;
     @include mobile{
