--- a/src/sass/frontpages/_member.scss
+++ b/src/sass/frontpages/_member.scss
@@ -1,32 +1,34 @@
 //member首圖
-
-
-
-.member_top {
-    width: 100%;
-    position: relative;
-    height: 500px;
-    background-image: url("../../img/activity/member_banner.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    @include mobile{
-        height: 250px;
-    }
+.memberTop.container-fluid{
+    @include top_block("../img/activity/member_banner.jpg");
 }
 
-.memberTitle {
-    text-align: center;
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    @include mobile{
-        font-size: 24px;
-        text-align: center;
-    }
-}
+
+// .member_top {
+//     width: 100%;
+//     position: relative;
+//     height: 500px;
+//     background-image: url("../../img/activity/member_banner.png");
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     @include mobile{
+//         height: 250px;
+//     }
+// }
+
+// .memberTitle {
+//     text-align: center;
+//     display: inline-block;
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     color: white;
+//     @include mobile{
+//         font-size: 24px;
+//         text-align: center;
+//     }
+// }
 
 
 
