style: 後臺活動管理和訂單管理寬度調整為px

--- a/src/sass/backpages/_back_activity.scss
+++ b/src/sass/backpages/_back_activity.scss
@@ -2,6 +2,10 @@
     padding: 0 40px;
     margin-left: 20%;
     @include back_title();
+    .act-content-container{
+        width: 900px;
+        margin: 0 auto;
+    }
     .buttonsnNumber{
         display: flex;
         justify-content: space-between;
