--- a/src/sass/backpages/_back_order_detail.scss
+++ b/src/sass/backpages/_back_order_detail.scss
@@ -1,5 +1,6 @@
 .order-detail{
     .order-info{
+        width: 900px;
         border: 1px solid $color_G;
         margin-bottom: 20px;
         .title{
