--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -1,6 +1,10 @@
 .backcontainer{
+    .act-detail-container{
+        width: 900px;
+        margin: 0 auto;
+    }
     .activity-detail{
-        width: 70%;
+        width: 88%;
         margin: 0 auto;
         
 
@@ -9,7 +13,7 @@
         }
         #drop_zone{
         border: 1px solid $color_G;
-        width: 100%;
+        width: 70%;
         height: 400px;
         margin: 0 auto;
         display: flex;
