--- a/src/sass/layout/_back.aside.scss
+++ b/src/sass/layout/_back.aside.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     align-items: center;
     position: fixed;
+    z-index: 800;
     top: 0;
     // @include borderTest(); //測試線
     @include textCenter();
