--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -248,6 +248,8 @@
            top: 10%;
            left: 50%;
            transform: translate(-50%);
+           
+
            @include mobile{
                top: 5%;
                 width: 350px;
@@ -258,6 +260,26 @@
             background-color: $color_Y;
             color: $color_W;
             @include textCenter();
+           }
+           
+           // 購物車的ul
+           ul{
+                
+                background-color: $color_W;
+                height: 550px;
+                overflow: auto;
+                padding: 0;
+           
+                &::-webkit-scrollbar-thumb{
+                    box-shadow: inset 0 0 4px $color_G;
+                    background-color: $color_G;
+                    border-radius: 8px;
+                    height: 20px;
+                }
+                &::-webkit-scrollbar{
+                    width: 5px;
+                }
+
            }
            .carBar{
                display: grid;
